[package]
name = "blank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_rapier3d = "0.25"
bevy_egui = "0.27"
bevy-inspector-egui = "0.24"
rand = "0.8.5"
[workspace]
resolver = "2"